@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 dc0a372296bb5210a82eec19b02c3ec76b8f466d ChangeLog
+SHA1 37d0c2e5ae04890ea67bfd99ed49ba716541f542 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 6d715413d2e0c8812135c89413b253b0f3f88f6a META.yml
-SHA1 e6a56584e6b15c0e5c28a72c2d2641cd9af278a2 Makefile.PL
+SHA1 20999103e9ea82afe7b7a2d24712555304aa9f51 META.yml
+SHA1 b18443b2e3bcdaef0495a9bbdd2ff2b088102264 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 a24d2d3fd4cb9af0cdf5c0c5777475281712f064 lib/Net/FullAuto.pm
+SHA1 99238d4cca32ed6a81737464d08b81c25d4dde4f lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT0ZfJAAoJEBa/9Pad787EUeAH/34WqQyDvvdG486WOFhm0SJ8
-F+Xcosz5PfbbJhWUThma7PRwMlTZsdE+McxZbj69a02z5f8CQ/Ym1AOd0vQm9FEB
-gETwiliCab2FExEGDYUDFqTFDAifmzJViJPnAIjmmVgfsJ4p0ifftLo/xI8btJ/a
-35IpFzlQkwsvkvbbwUCReOlSlSID8K8KkTvjQEBuD4NmoFzvRt3Eji+2oal3UWt7
-NxwTEgDZ88qGqJiQo+/bUZAtf7wc8pzWBe+gHJv/znwKuOGMcfhLA+5a2aTtJRNr
-pg5qil/mJIXC3wAxhtmSaSenhQQMOeqJzteyczmeFDt8eS2ApkSKt6mffMd/GVc=
-=//oY
+iQEcBAEBAgAGBQJT0oL3AAoJEBa/9Pad787Ez7cH/A2o0u8L+YwEQdTo5nztNWN7
+n2mFnc+3G00a5vTAHf8lCfGhyyiS7l87CqofRoL0weJuzc6NzpcuEtkLipoXbogd
+8Xvq4lmSaJl0TXG/oDZWpEoLXu3OIaDO0TAXlUpS7FM9aKGW8JIw77hwYvgjV+Ag
+W2L2EnSW3DbwmEXlrv8oltvNGHVtf+gyNDRRxKr6jlXH4muHc3jsSmVnmhoBjIZl
+p6HnQWMgyoW1RKP4WjjrdvUm/+BGklD2J9MkVQJcQinL/xrU43W7nO6HIs2CDHNs
+SK03gUn0fNSRV1Ee7EmDdaTv4b/CuSdYcBmZZ7zCU7K/Bkg0nWeTDhoyD2BDh5s=
+=R3O4
 -----END PGP SIGNATURE-----
