@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999979';
+our $VERSION='0.9999999980';
 
 
 use 5.005;
